時刻ずれの検知機能を追加
